--- a/ui/index.html
+++ b/ui/index.html
@@ -3,22 +3,27 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>AI Microservice UI</title>
+    <title>PAIA - AI Microservice UI</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <div class="container">
-        <h1>AI Microservice Query</h1>
+        <h1>PAIA AI Microservice</h1>
         <div id="history" class="history"></div>
         <div class="input-section">
             <select id="service-select">
                 <option value="" disabled selected>Select a service</option>
             </select>
             <div id="dynamic-selectors" class="dynamic-selectors"></div>
-            <input type="text" id="query-input" placeholder="Enter your query">
+            <div class="query-container">
+                <input type="text" id="query-input" placeholder="Enter your query">
+                <input type="file" id="file-upload" accept=".txt" title="Upload a text file">
+                <button id="mic-btn" title="Record voice input">Voice</button>
+            </div>
             <button id="submit-btn">Submit</button>
         </div>
     </div>
-    <script src="script.js"></script>
+    <script src="api.js" type="module"></script>
+    <script src="script.js" type="module"></script>
 </body>
 </html>
